# Formation_neurones

./: .gitignore
CrewIA_FastApi/backend/: README.md  prospects_list.md  pyproject.toml  report.md  run_prospecting.py
CrewIA_FastApi/backend/src/ai_agent_crew/config/: agents.yaml
agentfastapi/: .env  DockerFile  app.py  requiments.txt  sent_log.csv
backend/: GEMINI.md
backend/db/: chroma.sqlite3
backend/knowledge/: user_preference.txt
backend/src/ai_agent_crew/: crew.py  main.py
backend/src/ai_agent_crew/config/: tasks.yaml
djangoTuto/my_tennis_club/: db.sqlite3
djangoTuto/my_tennis_club/members/: views.py
djangoTuto/my_tennis_club/members/migrations/: 0001_initial.py  (+1 more)
djangoTuto/my_tennis_club/my_tennis_club/: settings.py  urls.py
djangoTuto/myworld/: pyvenv.cfg
projet pyhton/fast-api/: link important
projet pyhton/fast-api/backend/: main.py
projet pyhton/fast-api/frontend/: package-lock.json  package.json
semaine1/jour1/citation-generator/: package-lock.json  package.json  server.js
semaine1/portfolio_site/: index.html  style.css
semaine2/todolist/: style.css  todolist.html
semaine3/: tictactoe.html
semaine3/25-reactjs/: package-lock.json  package.json
semaine3/25-reactjs/src/: App.js
semaine3/requetesApi/: api-lab.html  api-lab.js
semaine5/IAmail/: package-lock.json  package.json
semaine5/IAmail/my-project/: index.ts  package-lock.json  package.json
semaine6/applyDJANGO/django/: pyvenv.cfg
semaine6/documentationDjango/myproj/: pyvenv.cfg
semaine6/documentationDjango/mysite/: db.sqlite3
(+47 files in other folders)
