[project]
name = "ai_agent_crew"
version = "0.1.0"
description = "ai_agent_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
ai_agent_crew = "ai_agent_crew.main:run"
run_crew = "ai_agent_crew.main:run"
train = "ai_agent_crew.main:train"
replay = "ai_agent_crew.main:replay"
test = "ai_agent_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
